spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -662,6 +662,21 @@ pre code {
   max-width: 16.6666666667%;
 }
 
+.row-cols-7 > * {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+.row-cols-8 > * {
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+
+.row-cols-9 > * {
+  flex: 0 0 16.6666666667%;
+  max-width: 16.6666666667%;
+}
+
 .col-auto {
   flex: 0 0 auto;
   width: auto;
